Fixed deprecated API usage in ParallelSeqGroupProducerTest.